ml-inference-gitops-pipeline/apps/ml-inference/hpa.yaml
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
 name: ml-inference-api
 namespace: default
spec:
 scaleTargetRef:
  apiVersion: apps/v1
  kind: Deployment
  name: ml-inference-api

 minReplicas: 3
 maxReplicas: 10

 metrics:
 - type: Resource
   resource:
    name: cpu
    target: 
     type: Utilization
     averageUtilization: 50
